--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,24 @@ html, body, [class*="css"] {
     align-items: center;
     height: 100vh;
 }
+
+.news {
+          display: flex;
+          flex-direction: row-reverse;
+          background: lightgrey;
+        }
+
+ .content.text{
+    flex: 2;
+    padding: 20px;
+ }
+  .content.image{
+    flex: 1;
+ }
+
+img{
+    width:80%;
+    margin-top:15%;
+    margin-left:10%;
+    height:60%;
+}
